Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <section class="page-header">
       <h1 class="project-name">Cultural Evening 2016</h1>
       <h2 class="project-tagline">&quot;Let there be culture.&quot;</h2>
+      <a href="https://github.com/labcoatlazuli/culturalevening2016" class="btn">View on GitHub</a>
+      <a href="https://github.com/labcoatlazuli/culturalevening2016/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/labcoatlazuli/culturalevening2016/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -47,7 +50,7 @@ Participants MUST arrive by 1:00 PM for a rehearsal and to help set up.</p>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>If you have any questions, please see Advik Chaudhary in Year 13 (<a href="mailto:advikchaudhary@gmail.com">advikchaudhary@gmail.com</a>) or Eugene Lee in Year 12 (<a href="mailto:eugenelee456@gmail.com">eugenelee456@gmail.com</a>).</p>
+<p>If you have any questions, please see Advik Chaudhary in Year 13 (<a href="mailto:chaudharyadvik@gmail.com">chaudharyadvik@gmail.com</a>) or Eugene Lee in Year 12 (<a href="mailto:eugenelee456@gmail.com">eugenelee456@gmail.com</a>).</p>
 
 <p>We hope to see you there!</p>
 
