--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Cultural Evening 2016</h1>
       <h2 class="project-tagline">&quot;Let there be culture.&quot;</h2>
-      <a href="https://google.com" class="btn">Buy Tickets</a>
+      <a href="https://labcoatlazuli.github.io/culturalevening2016#tickets" class="btn">Buy Tickets</a>
       <a href="https://google.com" class="btn">Download Donation Form</a>
       <a href="https://saintolaves.net" class="btn">Go to school website</a>
     </section>
@@ -27,7 +27,7 @@
 <p>Cultural Evening is St Olave's yearly event celebrating the cultural diversity that is the lifeblood of St Olaves, <del>before exams start and everybody is assigned a candidate number</del>. Continue reading for information about tickets, times and dates.</p>
 
 <h3>
-<a id="where-can-i-buy-tickets" class="anchor" href="#where-can-i-buy-tickets" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Where can I buy tickets?</h3>
+<a id="where-can-i-buy-tickets" class="anchor" href="#tickets" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Where can I buy tickets?</h3>
 
 <p>A limited number of tickets will be available outside the Sixth Form Common Room door. They will also be sold online, via sQuid. Prices are  for students and  for adults. Note that this year, <em>there will be no ticket sales on the door. Seriously.</em> So make sure you buy your tickets ASAP to ensure yourself and your families/friends/guests/<del>random strangers off the street</del>, places in our Great Hall on the night.</p>
 
