--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline">&quot;Let there be culture.&quot;</h2>
       <a href="https://labcoatlazuli.github.io/culturalevening2016/#where-can-i-buy-tickets" class="btn">Buy Tickets</a>
       <a href="https://google.com" class="btn">Download Donation Form</a>
-      <a href="saintolaves.net" class="btn">Go to school website</a>
+      <a href="http://saintolaves.net" class="btn">Go to school website</a>
     </section>
 
     <section class="main-content">
