--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <h3>
 <a id="where-can-i-buy-tickets" class="anchor" href="#where-can-i-buy-ticketts" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Where can I buy tickets?</h3>
 
-<p>A limited number of tickets will be available outside the Sixth Form Common Room door. They will also be sold online, via sQuid. Prices are  for students and  for adults. Note that this year, <em>there will be no ticket sales on the door. Seriously.</em> So make sure you buy your tickets ASAP to ensure yourself and your families/friends/guests/<del>random strangers off the street</del>, places in our Great Hall on the night.</p>
+<p>A limited number of tickets will be available outside the Sixth Form Common Room door. They will also be sold online, via sQuid. Prices are {unconfirmed} for students and {unconfirmed} for adults. Note that this year, <em>there will be no ticket sales on the door. Seriously.</em> So make sure you buy your tickets ASAP to ensure yourself and your families/friends/guests/<del>random strangers off the street</del>, places in our Great Hall on the night.</p>
 
 <p>Ticket sales close on the Thursday, 17th of November.</p>
 
