--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline">&quot;Let there be culture.&quot;</h2>
       <a href="https://labcoatlazuli.github.io/culturalevening2016/#where-can-i-buy-tickets" class="btn">Buy Tickets</a>
       <a href="this link doesn't work yet" class="btn">Download Donation Form</a>
-      <a href="this link doesn't work yet" class="btn">Download Event Program</a>
+      <a href="indexnew.html" class="btn">test</a>
     </section>
 
     <section class="main-content">
