--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@ Guests are welcome from 6:30 PM onwards.
 Participants MUST arrive by 1:00 PM for a rehearsal and to help set up.</p>
 
 <p>The event itself begins at 7:00 PM.</p>
+      
+<h3>
+<a id="donating-food-drink-items" class="anchor" href="#donating-food-drink-items" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Donating food/drink/other items</h3>
 
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeRcDs3wQwyiKCecytWJkbwANaVA-ZfmLx9cSs97g6q5DQA3g/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      
 <h3>
 <a id="anything-else" class="anchor" href="#anything-else" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Anything else?</h3>
 
