--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">Cultural Evening 2016</h1>
       <h2 class="project-tagline">&quot;Let there be culture.&quot;</h2>
       <a href="https://labcoatlazuli.github.io/culturalevening2016/#where-can-i-buy-tickets" class="btn">Buy Tickets</a>
-      <a href="https://labcoatlazuli.github.io/culturalevening2016/donating-food-drink-items" class="btn">Universal Donations Form</a>
+      <a href="https://labcoatlazuli.github.io/culturalevening2016/#donating-food-drink-items" class="btn">Universal Donations Form</a>
       <a href="index.html" class="btn">Download Event Program (not yet functional)</a>
     </section>
 
