--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <h2 class="project-tagline">&quot;Let there be culture.&quot;</h2>
       <a href="https://labcoatlazuli.github.io/culturalevening2016/#where-can-i-buy-tickets" class="btn">Buy Tickets</a>
       <a href="https://labcoatlazuli.github.io/culturalevening2016/#donating-food-drink-items" class="btn">Universal Donations Form</a>
-      <a href="index.html" class="btn">Download Event Program (not yet functional)</a>
+      <a href="about:blank" class="btn">Download Event Program</a>
     </section>
 
     <section class="main-content">
-      <p>Cultural Evening is back for another year of showcasing the best, most diverse talents, cuisine and cultures that St Olave's has to offer. Come along for a guaranteed evening of music, dance, and more. And food.</p>
+      <p>Cultural Evening is back for another year of showcasing the best, most diverse talents, cuisine and cultures that St Olave's has to offer. Come along for a guaranteed evening of music, dance, fashion and food.</p>
 
 <h3>
 <a id="whats-going-on-why-am-i-here" class="anchor" href="#whats-going-on-why-am-i-here" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What's going on? Why am I here?</h3>
@@ -29,16 +29,15 @@
 <h3>
 <a id="where-can-i-buy-tickets" class="anchor" href="#where-can-i-buy-ticketts" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Where can I buy tickets?</h3>
 
-<p>A limited number of tickets will be available outside the Sixth Form Common Room door. They will also be sold online, via sQuid. Prices are {unconfirmed} for students and {unconfirmed} for adults. Note that this year, <em>there will be no ticket sales on the door. Seriously.</em> So make sure you buy your tickets ASAP to ensure yourself and your families/friends/guests/<del>random strangers off the street</del>, places in our Great Hall on the night.</p>
+<p>A limited number of tickets will be available outside the Sixth Form Common Room door. They will also be sold online, via sQuid. Prices are £8 for students and £10 for adults. Note that this year, <em>there will be no ticket sales on the door.</em> So make sure you buy your tickets ASAP to ensure yourself and your families/friends/guests places in our Great Hall on the night.</p>
 
 <p>Ticket sales close on the Thursday, 17th of November.</p>
 
 <h3>
 <a id="when-is-cultural-evening" class="anchor" href="#when-is-cultural-evening" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>When is Cultural Evening?</h3>
 
-<p>Cultural Evening takes place on the Saturday, 19th of November.
-Guests are welcome from 6:30 PM onwards.
-Participants MUST arrive by 1:00 PM for a rehearsal and to help set up.</p>
+      <p>Cultural Evening takes place on Saturday 19th November.</p>
+  <p>Guests are welcome from 6:30 PM onwards.</p>
 
 <p>The event itself begins at 7:00 PM.</p>
       
@@ -47,10 +46,6 @@ Participants MUST arrive by 1:00 PM for a rehearsal and to help set up.</p>
 
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeRcDs3wQwyiKCecytWJkbwANaVA-ZfmLx9cSs97g6q5DQA3g/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       
-<h3>
-<a id="anything-else" class="anchor" href="#anything-else" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Anything else?</h3>
-
-<p><del>It's banter.</del></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
