--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h3>
 <a id="donating-food-drink-items" class="anchor" href="#donating-food-drink-items" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Donating food/drink/other items</h3>
 
-      <a href="https://goo.gl/forms/8ixc3mXsW8I0Vu133" class="btn">Link to Donation form</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeRcDs3wQwyiKCecytWJkbwANaVA-ZfmLx9cSs97g6q5DQA3g/viewform">Link to Donation Form</a>
       
 
 <h3>
