--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h3>
 <a id="whats-going-on-why-am-i-here" class="anchor" href="#whats-going-on-why-am-i-here" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What's going on? Why am I here?</h3>
 
-<p>Cultural Evening is St Olave's yearly event celebrating the cultural diversity that is the lifeblood of St Olaves, <del>before exams start and everybody is assigned a candidate number</del>. Continue reading for information about tickets, times and dates.</p>
+<p>Cultural Evening is St Olave's yearly event celebrating the cultural diversity that is the lifeblood of St Olaves. Continue reading for information about tickets, times and dates.</p>
 
 <h3>
 <a id="where-can-i-buy-tickets" class="anchor" href="#where-can-i-buy-ticketts" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Where can I buy tickets?</h3>
